Fix text align

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@ p {
   margin-top: 10px;
   text-transform: uppercase;
   letter-spacing: 0.05em;
+  text-align: center;
 }
 
 .city-name {
